[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralstars"
version = "v0.1.0"
description = "Neural Stars**: An innovative machine learning framework for learning joint distributions of system-relevant data through probabilistic modeling and multidirectional training. Designed for flexibility, Neural Stars enable predictions across diverse input-output configurations without retraining, supporting system understanding and sustainable AI across various domains."
readme = "README.rst"
authors = [
  {name = "Ángel Díaz Carral", email = "angel.diaz-carral@simtech.uni-stuttgart.de"}
]
maintainers = [
  {name = "Ángel Díaz Carral", email = "angel.diaz-carral@simtech.uni-stuttgart.de"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/adiazcarral/neuralstars/issues"
changelog = "https://github.com/adiazcarral/neuralstars/blob/master/changelog.md"
homepage = "https://github.com/adiazcarral/neuralstars"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

